[package]
name = "rshred"
version = "0.1.0"
authors = ["Alexey Zinchenko <alexey.zinchenko@protonmail.com>"]
edition = "2018"
repository = "https://github.com/Prominence/rshred"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
rand = "0.8.3"
walkdir = "2.3.1"
indicatif = "0.15.0"

[dev-dependencies]
ntest = "0.7.3"

[profile.release]
opt-level = 'z' # optimize for size
lto = true
codegen-units = 1
panic = 'abort'